--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,23 @@
 {
-    // See http://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
+    // 
+    See http://go.microsoft.com/fwlink/?LinkId=827846 to learn about workspace recommendations.
     // Extension identifier format: ${publisher}.${name}. Example: vscode.csharp
 
     // List of extensions which should be recommended for users of this workspace.
     "recommendations": ["esbenp.prettier-vscode", "dbaeumer.vscode-eslint"],
     // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
-    "unwantedRecommendations": []
+    "unwantedRecommendations": []📄 Сделка #D20028837
+
+👤 Milkless Ichidna · 📝
+🏆 0 сделок · 0% · $0
+
+Покупаете: 🪙 14.173052 USDT
+Платите: 🪙 600 UAH
+
+Цена за 🪙 1 USDT: 🪙 42.33 UAH
+
+Способ оплаты: ПриватБанк 
+Реквизиты: 5168745136444145 
+
+⚡️ Отправьте 600 UAH через ПриватБанк в течение 15 мин, используя указанные выше реквизиты. Если вы передумали, отмените сделку.
 }
